# ircd-ratbox

./: BUGS  CREDITS  INSTALL  Makefile.am  Makefile.in  README.FIRST  README.md  RELNOTES  SVN-Access  acinclude.m4  configure  configure.ac  install-mod.sh.in  main.c
bandb/: Makefile.am  Makefile.in  bandb.c  bantool.c  rsdb.h  rsdb_sqlite3.c
contrib/: Makefile.am  Makefile.in  README  example_module.c  ircd-shortcut.pl  m_42.c  m_clearchan.c  m_flags.c  m_force.c  m_mkpasswd.c  m_ojoin.c  m_okick.c  m_olist.c  m_opme.c  m_webirc.c  spy_admin_notice.c  spy_info_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c  spy_stats_p_notice.c  spy_whois_notice.c  spy_whois_notice_global.c
doc/: Makefile.in  README.cidr_bans  challenge.txt  collision_fnc.txt  example.conf  example.efnet.conf  genopercert.sh  genssl.sh  hooks.txt  index.txt  ircd-ratbox.init  ircd_crontab.sh  logfiles.txt  modeg.txt  modes.txt  ratbox-rotate.sh  server-version-info  services.txt  tgchange.txt  whats-new-2.0.txt  whats-new-2.1.txt  whats-new-2.2.txt
help/: Makefile.am  Makefile.in
include/: bandbi.h  cache.h  channel.h  class.h  client.h  config.h  defaults.h  dns.h  hash.h  hook.h  hostmask.h  ipv4_from_ipv6.h  ircd.h  ircd_defs.h  ircd_getopt.h  ircd_signal.h  listener.h  match.h  modules.h  monitor.h  newconf.h  numeric.h  operhash.h  packet.h  parse.h  patchlevel.h  reject.h  s_auth.h  s_conf.h  s_gline.h  s_log.h  s_newconf.h  s_serv.h  (+13 more)
libratbox/src/: Makefile.am  Makefile.in  arc4random.c  commio.c  crypt.c  devpoll.c  epoll.c  event.c  export-syms.txt  gnutls.c  helper.c  kqueue.c  linebuf.c  mbedtls.c  nossl.c  openssl.c  patricia.c  poll.c  ports.c  ratbox_lib.c  rawbuf.c  rb_memory.c  rb_tools.c  select.c  snprintf.c  unix.c  version.c.SH  win32.c
resolver/: Makefile.am  getaddrinfo.c  getaddrinfo.h  getnameinfo.c  getnameinfo.h  res.c  res.h  reslib.c  reslib.h  reslist.c  resolver.c
(+144 files in other folders)
